# openvino.genai

samples/cpp/dp_test/: CMakeLists.txt  dp_test.cpp
text_generation/causal_lm/cpp/: greedy_causal_lm.cpp
